build_errors.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.14/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 

> Configure project :
-------------------------------------
NeoGradle detected a problem with your project: Run.getProgramArguments()
Details: The method getProgramArguments() is deprecated and will be removed in the future
Potential Solution: Use getArguments() instead of getProgramArguments()
More information: https://github.com/neoforged/NeoGradle/blob/NG_7.1/README.md#common-runs-configuration-types-configure-by-type
-------------------------------------

> Task :neoFormListLibraries UP-TO-DATE
> Task :cacheVersionManifest1.21.10 UP-TO-DATE
> Task :cacheVersionExecutableClient1.21.10 UP-TO-DATE
> Task :cacheVersionExecutableServer1.21.10 UP-TO-DATE
> Task :cacheVersionExtractedServer1.21.10 UP-TO-DATE
> Task :cacheVersionMappingsClient1.21.10 UP-TO-DATE
> Task :create1.21.10ClientExtraJar UP-TO-DATE
> Task :selectRawArtifactNg_dummy_ng.net.minecraft_client_1.21.10_client-extra UP-TO-DATE
> Task :neoFormListTransformLibraries UP-TO-DATE
> Task :neoFormStripClient UP-TO-DATE
> Task :neoFormStripServer UP-TO-DATE
> Task :neoFormMerge UP-TO-DATE
> Task :neoFormMergeMappings UP-TO-DATE
> Task :neoFormRename UP-TO-DATE
> Task :neoFormDecompile UP-TO-DATE
> Task :neoFormInject UP-TO-DATE
> Task :neoFormPatch UP-TO-DATE
> Task :neoFormPatchUserDev UP-TO-DATE
> Task :neoFormTransformSource UP-TO-DATE
> Task :neoFormRecompile UP-TO-DATE
> Task :supplyRawJarForneoFormJoined1.21.10-20251010.172816 UP-TO-DATE
> Task :selectRawArtifactNg_dummy_ng.net.neoforged_neoforge_21.10.52-beta UP-TO-DATE

> Task :compileJava FAILED
./gradlew : C:\Users\M
W\Downloads\coding\MCO
PTI\src\main\java\com\
randomstrangerpassenge
r\mcopt\client\renderi
ng\ParticleOptimal.jav
a:17: error: '{' expec
ted
At line:1 char:1
+ ./gradlew compileJav
a --no-daemon 2>&1 | O
ut-File -FilePath ".\b
uild_ ...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (C:\Users\M   
 W\Dow...r: '{' ex    
pected:String) []    ,
 RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
public final class Par
ticleOptimal izationHa
ndler
                      
            ^
C:\Users\MW\Downloads\
coding\MCOPTI\src\main
\java\com\randomstrang
erpassenger\mcopt\clie
nt\rendering\ParticleO
ptimal.java:20: error:
 invalid method declar
ation; return type req
uired
    private ParticleOp
timizationHandler() {
            ^
2 errors

[Incubating] Problems report is available at: file:///C:/Users/MW/Downloads/coding/MCOPTI/build/reports/problems/problems-report.html

FAILURE: Build failed 
with an exception.

* What went wrong:
Execution failed for t
ask ':compileJava'.
> Compilation failed; 
see the compiler outpu
t below.
  C:\Users\MW\Download
s\coding\MCOPTI\src\ma
in\java\com\randomstra
ngerpassenger\mcopt\cl
ient\rendering\Particl
eOptimal.java:17: erro
r: '{' expected
  public final class P
articleOptimal ization
Handler
                      
              ^
  2 errors

* Try:
> Check your code and 
dependencies to fix th
e compilation error(s)
> Run with --scan to g
et full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 14s
23 actionable tasks: 1 executed, 22 up-to-date
